--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "supermarket",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +26,15 @@
     "nodemon": "^3.0.1",
     "pdfkit": "^0.13.0",
     "slugify": "^1.6.6"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OsaidAttar/supermarket.git"
+  },
+  "bugs": {
+    "url": "https://github.com/OsaidAttar/supermarket/issues"
+  },
+  "homepage": "https://github.com/OsaidAttar/supermarket#readme",
+  "description": ""
 }
